--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,113 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
-        xmlns:tools="http://schemas.android.com/tools"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="?attr/colorSurface"
+    >
+
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.home.HomeFragment">
+        android:clipToPadding="false"
+        android:layoutAnimation="@anim/layout_animation"
+        android:paddingBottom="100dp"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_view_note"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:listitem="@layout/note_card"
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp"
-            android:clipToPadding="false"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+        android:id="@+id/extended_action_add_new_note"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:layout_gravity="bottom|end"
+        app:layout_anchorGravity="bottom|end"
+        app:theme="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
+        app:icon="@drawable/ic_note_add"
+        android:text="@string/title_new_note"/>
 
-        <com.google.android.material.appbar.AppBarLayout
-            android:id="@+id/app_bar_layout"
+    <com.google.android.material.appbar.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fitsSystemWindows="true">
+            app:layout_scrollFlags="scroll|enterAlways|snap">
 
             <com.google.android.material.search.SearchBar
-                android:id="@+id/open_search_bar"
-                android:layout_width="match_parent"
+                android:id="@+id/search_bar"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:hint="@string/search_note"
-                >
-            </com.google.android.material.search.SearchBar>
+                android:hint="Buscar nota"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/ib_notice"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:navigationIcon="@drawable/ic_delete"
+                />
 
+            <ImageButton
+                android:id="@+id/ib_notice"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:background="?attr/actionBarItemBackground"
+                android:src="@drawable/ic_notifications_none"
+                android:layout_marginHorizontal="12dp"
+                app:layout_constraintBottom_toBottomOf="@+id/iv_user_profile_image"
+                app:layout_constraintEnd_toStartOf="@+id/iv_user_profile_image"
+                app:layout_constraintTop_toTopOf="@+id/iv_user_profile_image" />
 
-        </com.google.android.material.appbar.AppBarLayout>
+            <ImageView
+                android:id="@+id/iv_user_profile_image"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:background="?attr/actionBarItemBackground"
+                android:src="@drawable/ic_person_24"
+                android:layout_marginHorizontal="12dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </com.google.android.material.appbar.AppBarLayout>
 
-        <FrameLayout
-            android:id="@+id/contextual_toolbar_container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:elevation="5dp"
-            android:visibility="gone">
+    <com.google.android.material.search.SearchView
+        android:id="@+id/search_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:hint="Escribe la nota"
+        app:layout_anchor="@id/search_bar">
 
-            <com.google.android.material.appbar.MaterialToolbar
-                android:id="@+id/contextual_toolbar"
-                style="?attr/catalogToolbarWithCloseButtonStyle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:theme="@style/ThemeOverlay.Material3.Catalog.Toolbar.Contextual"
-                app:titleTextAppearance="@style/TextAppearance.Material3.Catalog.Toolbar.Contextual.Title"/>
-        </FrameLayout>
-
-
-        <ProgressBar
-            android:id="@+id/spinner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:visibility="invisible"
-            tools:visibility="visible"/>
-
-        <com.google.android.material.search.SearchView
-            android:id="@+id/open_search_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:hint="@string/search_note"
-            app:layout_anchor="@id/open_search_bar">
-
-        <!-- Content goes here (ScrollView, RecyclerView, etc.). -->
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scrollbars="none">
-
-            <LinearLayout
-                android:id="@+id/open_search_view_suggestion_container"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"/>
-        </ScrollView>
-        </com.google.android.material.search.SearchView>
-
-        <com.airbnb.lottie.LottieAnimationView
-            android:id="@+id/animationToEmpty"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:lottie_autoPlay="true"
-            app:lottie_loop="true"
-            app:lottie_rawRes="@raw/shake_a_empty_box" />
-
-
-        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-            android:id="@+id/button_add_new_note"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/title_new_note"
-            android:layout_margin="12dp"
-            app:icon="@drawable/ic_add"
-            android:layout_gravity="end|bottom"/>
-
-        <ProgressBar
-            android:id="@+id/loading"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            />
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
-</layout>
+        <include
+            android:id="@+id/search_ext"
+            layout="@layout/home_search" />
+    </com.google.android.material.search.SearchView>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
