--- a/app/src/main/res/layout/fragment_new_note.xml
+++ b/app/src/main/res/layout/fragment_new_note.xml
@@ -1,49 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".ui.note.NoteFragment">
+
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.note.NoteFragment">
-
-
+        android:orientation="vertical">
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/input_layout_title"
+            android:id="@+id/layout_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/title_new_note"
-            style="@style/Widget.Material3.TextInputLayout.FilledBox"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
+
+            >
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/edit_title"
+                android:id="@+id/text_title"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:hint="hint" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/layout_input_title"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:hint="Redactar"
-            style="@style/Widget.Material3.TextInputLayout.FilledBox"
-            app:layout_constraintTop_toBottomOf="@+id/input_layout_title"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
+            android:id="@+id/layout_note"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/SquareShapeAppearance">
 
-            <androidx.appcompat.widget.AppCompatEditText
-                android:id="@+id/edit_note"
-                style="@style/ContentEditText"
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/text_note"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:inputType="textMultiLine"
-                />
+
+                android:hint="hint" />
         </com.google.android.material.textfield.TextInputLayout>
 
-        
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</layout>
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/action_button_save"
+            android:text="Save"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
