--- a/app/src/main/res/layout/note_card.xml
+++ b/app/src/main/res/layout/note_card.xml
@@ -1,75 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+<com.google.android.material.card.MaterialCardView android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/notes_container"
     android:layout_margin="12dp"
     android:clickable="true"
     android:focusable="true"
-    android:checkable="true">
+    android:checkable="true"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/textviewtitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:ellipsize="marquee"
-            android:fontFamily="@font/aldrich"
-            android:marqueeRepeatLimit="marquee_forever"
-            android:padding="12dp"
-            android:scrollHorizontally="true"
-            android:singleLine="true"
-            android:text="Title"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/image_pind"/>
-
-        <ImageView
-            android:id="@+id/image_pind"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_pin"
-            android:layout_margin="8dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:visibility="invisible"
-            tools:visibility= "visible"
-            />
-
-        <TextView
-            android:id="@+id/text_notes"
-            android:text="Notas"
-            android:textSize="14sp"
-            android:maxLines="4"
-            android:padding="8dp"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/textviewtitle"
-            app:layout_constraintStart_toStartOf="parent"/>
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/text_date"
-            android:text="Date"
-            android:singleLine="true"
-            android:ellipsize="marquee"
-            android:scrollHorizontally="true"
-            android:textSize="14sp"
-            android:textStyle="normal"
-            android:maxLines="10"
-            android:padding="8dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/text_notes"
-            app:layout_constraintStart_toStartOf="parent"/>
+            <TextView
+                android:id="@+id/text_view_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:ellipsize="marquee"
+                android:fontFamily="@font/aldrich"
+                android:marqueeRepeatLimit="marquee_forever"
+                android:padding="12dp"
+                android:scrollHorizontally="true"
+                android:singleLine="true"
+                tools:text="@string/title_new_note"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/image_pind" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <ImageView
+                android:id="@+id/image_pind"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_pin"
+                android:layout_margin="8dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:visibility="invisible"
+                tools:visibility="visible"
+                android:contentDescription="@string/description_image" />
 
 
-</com.google.android.material.card.MaterialCardView>
+            <TextView
+                android:id="@+id/text_notes"
+                tools:text="@string/lorem_text"
+                android:textSize="14sp"
+                android:maxLines="4"
+                android:paddingVertical="8dp"
+                android:paddingHorizontal="12dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@+id/text_view_title"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <TextView
+                android:id="@+id/text_date"
+                android:text="@string/example_date"
+                android:singleLine="true"
+                android:ellipsize="marquee"
+                android:scrollHorizontally="true"
+                android:textSize="12sp"
+                android:textStyle="normal"
+                android:gravity="end"
+                android:maxLines="10"
+                android:padding="8dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@+id/text_notes"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <View
+                android:id="@+id/color_indicator"
+                android:layout_width="match_parent"
+                android:layout_height="8dp"
+                tools:background="@color/md_theme_light_primary"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    </com.google.android.material.card.MaterialCardView>
